2007-08-18  Giuseppe Coviello  <cjg@cruxppc.org>

	* Version 3.2

2007-08-16  Giuseppe Coviello  <cjg@cruxppc.org>

	* doc/ilenia.8.in: added the documentation for the --show-readme
	command.
	
	* src/dependencies.c (dependencies_append_at_deep): solved a bug
	while solving dependencies.

2007-06-24  Giuseppe Coviello  <cjg@cruxppc.org>

	* doc/ilenia.8.in: added the documentation for ENABLE_XTERM_TITLE,
	DEFAULT_XTERM_TITLE, ENABLE_LOG and REJECTED_POLICY variables and
	--just-install option.

	* conf/ilenia.conf: added the skeleton for REJECTED_POLICY variable

	* src/conf.c (conf_init): added the support for selecting the
	policy in managing rejected files

	* src/update.c: created two functions, rejected_manage and
	rejected_count, to manage rejected files

2007-06-19  Giuseppe Coviello  <cjg@cruxppc.org>

	* src/ilenia.c: managing the just_install feature via the
	--just-install option

	* src/update.c (update_package): added the just_install feature to
	avoid the update of outdate dependencies

2007-06-18  Giuseppe Coviello  <cjg@cruxppc.org>

	* conf/ilenia.conf: added the skeleton for ENABLE_LOG variable

	* src/conf.c (conf_init): added the support for enabling/disabling
	the log facility

	* src/job.c: added a simple log facility to trace
	install/update/remove packages actions

2007-06-16  Giuseppe Coviello  <cjg@cruxppc.org>

	* conf/ilenia.conf: added the skeleton for ENABLE_XTERM_TITLE and
	DEFAULT_XTERM_TITLE variables

	* src/update.c: added support for xterm_set_title
	(update_system): post_pkgadd in update_system working again

	* src/repository.c: added support for xterm_set_title

	* src/remove.c: added support for xterm_set_title

	* src/port.c: added support for xterm_set_title

	* src/dependencies.c: added support for xterm_set_title

	* src/cache.c (cache_build): added support for xterm_set_title

	* src/conf.c (conf_init): added the support for enabling/disabling
	setting xterm's titlebar via ENABLE_XTERM_TITLE variable, and the